# infra

./: .env.example  .gitignore  README.md  build_macos_app.sh  pyproject.toml  run_gui_debug.sh  setup.py
infra/: README.md  __init__.py  cli.py  config.py
infra/gui/: README.md  __init__.py  app.py  main_window.py
infra/gui/create/: __init__.py
infra/gui/logging/: __init__.py  log_widget.py
infra/gui/operations/: __init__.py
infra/gui/project/: __init__.py  project_setup_view.py
infra/gui/resources/: fallback_icons.py  icons.py  style.qss  styles.py
infra/gui/settings/: __init__.py  settings_view.py
infra/gui/templates/: __init__.py
infra/gui/widgets/: custom_widgets.py
infra/project_setup/: __init__.py  core.py  environment.py  types.py
infra/providers/git/: __init__.py  github.py  local.py
infra/providers/local/: env.py
infra/templates/: __init__.py  generator.py
infra/templates/chatbot/: .gitignore  README.md  requirements.txt  template_setup.py
infra/templates/chatbot/project/: asgi.py  settings.py  urls.py
infra/templates/empty/: .gitignore  template_setup.py
infra/templates/landing/: .gitignore  README.md  package-lock.json  package.json  template_setup.py
infra/templates/landing/public/: index.html
infra/templates/landing/src/: App.js
infra/templates/react/: .eslintrc.cjs  .gitignore  README.md  index.html  package-lock.json  package.json  template_setup.py  vite.config.js
infra/templates/react/src/: App.tsx  index.css
infra/templates/webapp/: template_setup.py
infra/templates/webapp/backend/: .gitignore  Dockerfile  langbit-api-specification.md  requirements.txt
infra/templates/webapp/frontend/: .gitignore  Dockerfile  README.md  package-lock.json  package.json
tests/: test_core.py  test_db_creation.py
(+28 files in other folders)
